k8s/infrastructure/monitoring/zabbix/base/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    karlsen.fr/inject-cluster-ca: 'true'
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
