k8s/infrastructure/monitoring/zabbix/base/Deployment.backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: zabbix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: zabbix
    # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: zabbix
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: zabbix
      # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: backend
      securityContext:
        runAsNonRoot: true
        runAsUser: 1997
        runAsGroup: 1995
        fsGroup: 1995
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
        sysctls:
          - {name: net.ipv4.ping_group_range, value: '0 1995'}
      containers:
        - name: backend
          # Dockerfile: https://github.com/zabbix/zabbix-docker/blob/7.4/Dockerfiles/server-pgsql/alpine/Dockerfile
          image: docker.io/zabbix/zabbix-server-pgsql:alpine-7.4.9@sha256:92d280d694a2192dc0ca9e4677abd6ae2d68132d6739d5fcbde10b58f544e5d4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 128Mi}
            limits: {memory: 128Mi}
          ports:
            - {name: zabbix-server, protocol: TCP, containerPort: 10051}
          startupProbe: {tcpSocket: {port: 10051}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {tcpSocket: {port: 10051}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {tcpSocket: {port: 10051}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: tmp-volume, mountPath: /tmp}
            - {name: var-lib-volume, mountPath: /var/lib/zabbix}
      volumes:
        - {name: tmp-volume, emptyDir: {}}
        - {name: var-lib-volume, emptyDir: {}}
