k8s/infrastructure/monitoring/zabbix/base/Deployment.frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: zabbix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: zabbix
    # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: zabbix
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: zabbix
      # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: frontend
      securityContext:
        runAsNonRoot: true
        runAsUser: 1997
        runAsGroup: 1995
        fsGroup: 1995
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: frontend
          # Dockerfile: https://github.com/zabbix/zabbix-docker/blob/7.4/Dockerfiles/web-nginx-pgsql/alpine/Dockerfile
          image: docker.io/zabbix/zabbix-web-nginx-pgsql:alpine-7.4.9@sha256:4171f82155ce4c0a177130c4ad418d48bbe81a431dc10d0678fbe28a9bf17779
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 256Mi}
            limits: {memory: 256Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 8080}
            - {name: https, protocol: TCP, containerPort: 8443}
          startupProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: openldap-conf-volume, mountPath: /etc/openldap/ldap.conf, subPath: ldap.conf, readOnly: true}
            - {name: cluster-ca-volume, mountPath: /etc/ssl/certs/cluster-root-ca.crt, subPath: cluster-root-ca.crt, readOnly: true}
      volumes:
        - {name: openldap-conf-volume, configMap: {name: openldap-conf}}
        - {name: cluster-ca-volume, configMap: {name: cluster-ca-bundle}}
