k8s/infrastructure/monitoring/zabbix/base/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: zabbix
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [zabbix.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: web, kind: Service, port: 80}]
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              # - {name: Access-Control-Allow-Origin, value: '*'}
              - {name: Content-Security-Policy, value: "default-src 'self'; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline' 'unsafe-eval' 'unsafe-hashes'; script-src-elem 'self' 'unsafe-inline'; script-src-attr 'unsafe-inline' 'unsafe-eval' 'unsafe-hashes'; script-src 'self' 'unsafe-eval'; img-src 'self' data: https://*.openstreetmap.org;"}
              - {name: Strict-Transport-Security, value: 'max-age=31536000; includeSubDomains; preload'}
              - {name: X-Content-Type-Options, value: nosniff}
              - {name: X-Frame-Options, value: DENY}
              - {name: Cross-Origin-Resource-Policy, value: same-origin}
              - {name: Cross-Origin-Embedder-Policy, value: unsafe-none}
              - {name: Cross-Origin-Opener-Policy, value: same-origin}
              - {name: Referrer-Policy, value: no-referrer}
              - {name: Permissions-Policy, value: 'accelerometer=(), autoplay=(), camera=(), encrypted-media=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()'}
              # - {name: Integrity-Policy, value: 'blocked-destinations=(script style),sources=(inline)'}
              # - {name: Reporting-Endpoints, value: ''}
